syntax = "proto3";
option java_package = "com.roje.game.message.action";
option java_multiple_files = true;

enum Action{
    snap = 0;
    ServRegReq = 1001;
    ServRegRes = 1002;
    ServInfoReq = 1003;
    ServInfoRes = 1004;

    LoginReq = 2001;
    loginRes = 2002;
    CreateCardRoomReq = 2003;
    CreateCardRoomRes = 2004;
    EntryRoomReq = 2005;
    EntryRoomRes = 2006;
    SitReq = 2007;
    SitRes = 2008;
    GameStartNotice = 2009;


    //扎金花/3001-3999
    BetNoticeAction = 3001;


    ErrorRes = 30001;

}