syntax = "proto3";
import "include/any.proto";
option java_package = "com.roje.game.message.frame";
option java_multiple_files = true;

message Frame{
    int32 action = 1;
    google.protobuf.Any data = 2;
}

message ErrorMessage{
    int32 code = 1;
    string msg = 2;
}